# binance

./: .env.example  .gitignore  README.md  pyproject.toml  watchdog.py
.github/: copilot-instructions.md
binance_bot/: app.py  config.py  heartbeat.py  indicators.py  logging_utils.py  main.py  market_data.py  state.py  strategy.py  telegram.py
binance_bot/backtest/: __main__.py  data_downloader.py  data_loader.py  execution.py  metrics.py  replay.py  reporting.py  runner.py  strategy_adapter.py
binance_bot/services/: binance_futures_service.py
binance_bot/strategy/: __init__.py  engine.py  entry.py  exit.py  indicators.py  plans.py  regime.py  risk.py  scoring.py  snapshot.py
deploy/: com.binance.bot.watchdog.plist  com.binance.bot.watchdog.plist.example
docs/: backtest-analysis-20260508.md  backtesting.md
scripts/: analyze_decisions.py  compare_backtests.py  run_strategy_experiments.py  watchdog_service.sh
tests/: test_backtest.py  test_pullback_and_scripts.py  test_strategy_integration.py
tests/fixtures/: __init__.py
upbit_bot/: heartbeat.py  logging_utils.py  telegram.py
