[project]
name = "binance-futures-bot"
version = "0.1.0"
description = "Binance USD-M futures automated trading bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.0,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["binance_bot", "binance_bot.services", "upbit_bot"]