[project]
name = "binance-futures-bot"
version = "0.1.0"
description = "Binance USD-M 선물 자동매매 봇"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.0,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["binance_bot*"]
